warning on restricted profile

--- a/pod-security-admission/pod-allow.yaml
+++ b/pod-security-admission/pod-allow.yaml
@@ -19,4 +19,4 @@ spec:
       mountPath: /data/demo
     securityContext:
       privileged: false
-      #allowPrivilegeEscalation: true
+      allowPrivilegeEscalation: true
